Add cairo, pixman, freetype

--- a/x86_64/dash/package.yml
+++ b/x86_64/dash/package.yml
@@ -16,8 +16,8 @@ build:
     - --prefix=$SYSROOT/usr
     - --host=$HOST
     - --enable-static
-    - --disable-fnmatch
-    - --disable-glob
+    - --enable-fnmatch=no
+    - --enable-glob=no
     - --without-libedit
 
   make:
