--- a/x86_64/libpng/package.yml
+++ b/x86_64/libpng/package.yml
@@ -23,7 +23,7 @@ build:
     - --prefix=/usr
     - --host=$HOST
     - --enable-static
-    - --disable-shared
+    - --enable-shared=no
     - --with-sysroot=$SYSROOT
 
   make:
