--- a/x86_64/libtsm/package.yml
+++ b/x86_64/libtsm/package.yml
@@ -18,8 +18,8 @@ build:
     - --prefix=/usr
     - --host=$HOST
     - --enable-static
-    - --disable-shared
-    - --disable-debug
+    - --enable-shared=no
+    - --enable-debug=no
     - --without-xkbcommon
     - --with-sysroot=$SYSROOT
 
