--- a/x86_64/freetype/package.yml
+++ b/x86_64/freetype/package.yml
@@ -15,7 +15,11 @@ build:
 
   env:
    - DESTDIR: $SYSROOT
-   - CFLAGS: -O2 -march=x86-64 -mtune=generic -I$PACKAGE_ZLIB/__out/usr/include
+   - ZLIB_CFLAGS: -I$PACKAGE_ZLIB/__out/usr/include
+   - ZLIB_LIBS: -lz
+   - LIBPNG_CFLAGS: -I$PACKAGE_LIBPNG/__out/usr/include
+   - LIBPNG_LIBS: -lpng -lz
+   - CFLAGS: -O2 -march=x86-64 -mtune=generic -I$PACKAGE_ZLIB/__out/usr/include -I$PACKAGE_LIBPNG/__out/usr/include
 
   configure:
     - --prefix=/usr
@@ -24,11 +28,13 @@ build:
     - --disable-shared
     - --disable-mmap
     - --disable-freetype-config
-    - --without-pthread
+    - --without-pthreads
     - --without-harfbuzz
     - --without-bzip2
     - --without-brotli
     - --without-librsvg
+    - --with-zlib
+    - --with-png
     - --with-sysroot=$SYSROOT
 
   make:
