--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Prepare environment
       working-directory: ${{github.workspace}}
       shell: bash
-      run: sudo apt update && sudo apt install -y wget bison flex build-essential python3 python3-pip ninja-build unzip && sudo pip3 install --upgrade meson requests
+      run: sudo apt update && sudo apt install -y wget bison flex build-essential python3 python3-pip ninja-build unzip gtk-doc-tools autoconf libtool
 
     - name: Prepare build-system
       working-directory: ${{github.workspace}}
