ci: update script to include target architecture parameter

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Prepare build-system
       working-directory: ${{github.workspace}}
       shell: bash
-      run: ci/prepare-and-build.sh
+      run: ci/prepare-and-build.sh x86_64
       
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
